correccion de PR y tabla Cliente
